Fixed some layout problems

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -56,8 +56,8 @@
 }
 
 @media (min-width: 1200px) {
-  .page {
-    flex-direction: row;
+  .container {
+    display: flex;
     align-items: center;
   }
 
