--- a/src/app/tools/page.module.css
+++ b/src/app/tools/page.module.css
@@ -1,6 +1,6 @@
 .page {
   width: 90%;
-  margin: 0 auto;
+  margin: 0 auto 5em;
   color: var(--color-text);
 }
 
